# aintellivr-back

./: Makefile  README.md  pyproject.toml
config/: prompt_library.yaml  routing_rules.yaml
src/aintellivr/modules/: intent_router.py
src/aintellivr/utils/: config_loaders.py  directories.py  load_llm.py  logging.py  prompt_loader.py  structured_predict.py  utils.py
tests/: test_intent_router.py
